src/objects/Account_Association__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Associated Accounts</relationshipLabel>
        <relationshipName>Account_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Associated_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Associations (Associated Account)</relationshipLabel>
        <relationshipName>Account_Associations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reciprocal_Association__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reciprocal Association</label>
        <referenceTo>Account_Association__c</referenceTo>
        <relationshipLabel>Account Associations</relationshipLabel>
        <relationshipName>Reciprocal_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cohort Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohort Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chapter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Association</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Account Association</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Reflexive_Account_Association</fullName>
        <active>true</active>
        <description>Prevents an Account from being associated with itself.</description>
        <errorConditionFormula>Account__r.Id = Associated_Account__r.Id</errorConditionFormula>
        <errorDisplayField>Associated_Account__c</errorDisplayField>
        <errorMessage>You cannot associate an Account with itself.</errorMessage>
    </validationRules>
</CustomObject>